-added 1-bit tile mode
-added tbblue register 63H: copper 16 bit write 
-added tbblue register 69H: display control 1 register
-added tbblue registers 0x35-0x39, 0x75-0x79
-added copper opcodes NOOP, HALT
-increased tbblue.mmc MMC image size to 64 MB
-updated to the last tbblue SD distribution. Now it holds the entire distribution
-enable real video by default

Improved Hex editor: can now copy to a different memory zone
Improved menu: 
-can now use PgUp,PgDn to jump menu pages
-added setting to disable File Utilities menu
-added more cyrillic characters support
-disabled menu items (the ones in red) are now called as "unavailable" instead of "disabled"

-Improved source code repository: now extras folder has been moved to another repository. See:
https://github.com/chernandezba/zesarux-extras

Improved accesibility: 
-pressing F4 key on a window menu, it will read that window again
-say when a selected menu item is not available
-Mac OS speech filter doesn't fail anymore when message has "-"
-selected item menu is called now "Selected item" (was called "Active item" before)
-when an error is generated on stdout driver, the message is send to text-to-speech

Improved assembler: added defs command
Improved AY Sheet: now you can select which AY Chip to show
Improved Waveform: new scroll type
Improved file selector: when asking for a directory, only shows directories, not files
Improved curses driver: symbol @ simulates ESC on menu
Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80
Improved curses driver: now can use utf "blocky" characters and have 64x48 resolution
Improved accurate Z80 timing: IM mode 0 is 1 t-state shorter than IM mode 1
Improved real tape loading: acceleration is disabled by default, added setting to save configuration
Improved cpu speed change: now it's a lot faster

Fixed error when trying to open user files on MacOS Catalina