@@ -57,7 +57,10 @@ Improved TBBlue emulation:
 -updated to the last tbblue SD distribution. Now it holds the entire distribution
 -enable real video by default
 
-Improved Hex editor: can now copy to a different memory zone
+Improved Hex editor: 
+-can now copy to a different memory zone
+-shows the memory pointer when editing memory
+
 Improved menu: 
 -can now use PgUp,PgDn to jump menu pages
 -added setting to disable File Utilities menu
